--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,88 @@
-pynest-api==0.2.3
 aiomysql==0.2.0
+alembic==1.7.4
+ansible-creator==0.0.1a4
+anyio==4.4.0
+astor==0.8.1
+async-timeout==4.0.3
+asyncpg==0.29.0
+attrs==23.1.0
+black==24.4.2
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+Deprecated==1.2.14
+distlib==0.3.7
+dnspython==2.6.1
+email_validator==2.2.0
+et-xmlfile==1.1.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
+filelock==3.12.4
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.4
+img2pdf==0.5.1
+injector==0.21.0
+Jinja2==3.1.2
+jproperties==2.1.1
+lxml==4.9.4
+Mako==1.3.5
+mariadb==1.1.8
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+mypy-extensions==1.0.0
+numpy==1.26.4
+openpyxl==3.1.2
+orjson==3.10.5
+outcome==1.2.0
+packaging==23.2
+pathspec==0.12.1
+pikepdf==8.10.1
+Pillow==10.1.0
+pipenv==2023.9.8
+platformdirs==3.10.0
+psycopg2==2.9.9
+pycparser==2.21
+pydantic==1.10.17
+Pygments==2.18.0
+PyMySQL==1.1.1
+pynest-api==0.2.3
+pyodbc==5.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-utils==3.8.1
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.2
+rich==13.7.1
+schedule==1.2.1
+selenium==4.13.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.19
+starlette==0.37.2
+timeunit==1.1.0
+trio==0.22.2
+trio-websocket==0.11.1
+typer==0.12.3
+typing_extensions==4.8.0
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.0.5
+uvicorn==0.30.1
+virtualenv==20.24.5
+watchfiles==0.22.0
+websockets==12.0
+wrapt==1.16.0
+wsproto==1.2.0
+XlsxWriter==3.1.6
